--- a/scripts/api-inference/templates/text_to_image.handlebars
+++ b/scripts/api-inference/templates/text_to_image.handlebars
@@ -14,13 +14,13 @@ Generate an image based on a given text prompt.
 
 ### API specification
 
-#### Inputs
+#### Request
 
 {{{specs.text-to-image.input}}}
 
 {{{constants.specsHeaders}}}
 
-#### Output
+#### Response
 
 {{{specs.text-to-image.output}}}
 
