template for snippets section + few things

--- a/scripts/api-inference/templates/image_to_image.handlebars
+++ b/scripts/api-inference/templates/image_to_image.handlebars
@@ -33,28 +33,4 @@ Use cases heavily depend on the model and the dataset it was trained on, but som
 
 ### Using the API
 
-<inferencesnippet>
-
-<curl>
-```bash
-{{{snippets.image-to-image.curl}}}
-```
-</curl>
-
-<python>
-```py
-{{{snippets.image-to-image.python}}}
-```
-
-To use the Python client, see `huggingface_hub`'s [package reference](https://huggingface.co/docs/huggingface_hub/package_reference/inference_client#huggingface_hub.InferenceClient.image_to_image).
-</python>
-
-<js>
-```js
-{{{snippets.image-to-image.javascript}}}
-```
-
-To use the JavaScript client, see `huggingface.js`'s [package reference](https://huggingface.co/docs/huggingface.js/inference/classes/HfInference#imagetoimage).
-</js>
-
-</inferencesnippet>
+{{{snippets.image-to-image}}}
