--- a/scripts/api-inference/templates/text_to_image.handlebars
+++ b/scripts/api-inference/templates/text_to_image.handlebars
@@ -26,28 +26,4 @@ Generate an image based on a given text prompt.
 
 ### Using the API
 
-<inferencesnippet>
-
-<curl>
-```bash
-{{{snippets.text-to-image.curl}}}
-```
-</curl>
-
-<python>
-```py
-{{{snippets.text-to-image.python}}}
-```
-
-To use the Python client, see `huggingface_hub`'s [package reference](https://huggingface.co/docs/huggingface_hub/package_reference/inference_client#huggingface_hub.InferenceClient.text_to_image).
-</python>
-
-<js>
-```js
-{{{snippets.text-to-image.javascript}}}
-```
-
-To use the JavaScript client, see `huggingface.js`'s [package reference](https://huggingface.co/docs/huggingface.js/inference/classes/HfInference#texttoimage).
-</js>
-
-</inferencesnippet>
+{{{snippets.text-to-image}}}
