first draft to add text-generation parameters

--- a/scripts/api-inference/templates/specs_output.handlebars
+++ b/scripts/api-inference/templates/specs_output.handlebars
@@ -1,5 +1,9 @@
 | Body |  |
-| :--- | :--- |
+| :--- | :--- | :--- |
 {{#each schema}}
-| **{{{name}}}** | {{{description}}} |
+{{#if type}}
+| **{{{name}}}** | _{{type}}_ | {{{description}}} |
+{{else}}
+| **{{{name}}}** | | {{{description}}} |
+{{/if}}
 {{/each}}
