--- a/scripts/api-inference/templates/image_to_image.handlebars
+++ b/scripts/api-inference/templates/image_to_image.handlebars
@@ -23,7 +23,11 @@ Use cases heavily depend on the model and the dataset it was trained on, but som
 
 #### Request
 
+##### Payload
+
 {{{specs.image-to-image.input}}}
+
+##### Headers
 
 {{{constants.specsHeaders}}}
 
