--- a/scripts/api-inference/templates/text_generation.handlebars
+++ b/scripts/api-inference/templates/text_generation.handlebars
@@ -16,7 +16,11 @@ Generate text based on a prompt.
 
 #### Request
 
+##### Payload
+
 {{{specs.text-generation.input}}}
+
+##### Headers
 
 {{{constants.specsHeaders}}}
 
