--- a/scripts/api-inference/templates/text_to_image.handlebars
+++ b/scripts/api-inference/templates/text_to_image.handlebars
@@ -16,7 +16,11 @@ Generate an image based on a given text prompt.
 
 #### Request
 
+##### Payload
+
 {{{specs.text-to-image.input}}}
+
+##### Headers
 
 {{{constants.specsHeaders}}}
 
