mention chat completion in text generation docs

--- a/scripts/api-inference/templates/task/text_generation.handlebars
+++ b/scripts/api-inference/templates/task/text_generation.handlebars
@@ -2,6 +2,8 @@
 
 Generate text based on a prompt.
 
+If you are interested in a Chat Completion task, which generates a response based on a list of messages, check out the [`chat-completion`](./chat_completion) task.
+
 {{{tips.linksToTaskPage.text-generation}}}
 
 ### Recommended models
